--- a/jdbc-web-p1/WebContent/WEB-INF/web.xml
+++ b/jdbc-web-p1/WebContent/WEB-INF/web.xml
@@ -3,10 +3,17 @@
   <display-name>jdbc-web-p1</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <servlet-name>MyHello</servlet-name>
+    <servlet-class>com.servlet.HelloServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MyHello</servlet-name>
+    <url-pattern>/hello</url-pattern>
+  </servlet-mapping>
+  <context-param>
+    <param-name>institute</param-name>
+    <param-value>Infocamps</param-value>
+  </context-param>
 </web-app>
